--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-		<section name="LicenseSettings" type="PingCastle.ADHealthCheckingLicenseSettings, PingCastle" />
+		<section name="LicenseSettings" type="PingCastleCloud.PingCastleLicenseSettings, PingCastleCloud" />
 	</configSections>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
